--- a/Assignment_3.ipynb
+++ b/Assignment_3.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "0oYoDS7-TsZk"
       },
@@ -51,9 +51,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UUU1dCV0WpAn",
-        "outputId": "42445ec9-1260-4f63-f27f-685b71f9d41b"
+        "outputId": "a7bd497b-2ab7-4ca0-bfb0-3f388b2ffb51"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,10 +74,12 @@
         "geo_rv = stats.geom(poi_rv.cdf(16))\n",
         "\n",
         "print(f\"1. {poi_rv.ppf(0.9)}\")\n",
+        "# print(f\"2. {poi_rv.ppf(0.1)}\")\n",
         "print(f\"2. {poi_rv.isf(0.9)}\")\n",
         "print(f\"3. {poi_rv.ppf(0.75) - poi_rv.ppf(0.25)}\")\n",
         "print(f\"4. {poi_rv.cdf(16):0.2f}\")\n",
         "print(f\"5. {geo_rv.mean():0.2f}\")\n",
+        "# print(f\"5. {1 / poi_rv.cdf(16):0.2f}\")\n",
         "print(f\"6. {geo_rv.ppf(0.75)}\")"
       ],
       "metadata": {
@@ -85,9 +87,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "91fe8832-4a23-4139-a80f-2aa8e4ecfb4c"
+        "outputId": "5dfbaa30-8d02-4305-de41-25ad19255228"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,6 +99,7 @@
             "2. 14.0\n",
             "3. 6.0\n",
             "4. 0.22\n",
+            "5. 4.52\n",
             "5. 4.52\n",
             "6. 6.0\n"
           ]
